# KokoroChat

./: .clinerules  .env.example  .gitignore  .pre-commit-config.yaml  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vitest.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/proptest-regressions/config/: property_tests.txt
src-tauri/proptest-regressions/db/: property_tests.txt
src-tauri/proptest-regressions/llm/: property_tests.txt
src-tauri/proptest-regressions/thought/: property_tests.txt
src-tauri/proptest-regressions/tts/: property_tests.txt
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  utils.rs
src-tauri/src/attachment/: mod.rs  processor.rs  property_tests.rs  tests.rs
src-tauri/src/character/: creator.rs  mod.rs  property_tests.rs  tests.rs
src-tauri/src/chat/: abort.rs  backward_compat_tests.rs  engine.rs  mod.rs  property_tests.rs  tests.rs
src-tauri/src/commands/: attachment.rs  character.rs  chat.rs  config.rs  debug.rs  knowledge.rs  memory.rs  mod.rs  plugin.rs  thought.rs  tts.rs
src-tauri/src/config/: mod.rs  model_config.rs  property_tests.rs  tests.rs
src-tauri/src/db/: database.rs  migrations.rs  mod.rs  property_tests.rs
src-tauri/src/llm/: client.rs  mod.rs  property_tests.rs  tests.rs  think_tag_buffer.rs
src-tauri/src/memory/: manager.rs  mod.rs  property_tests.rs  tests.rs
src-tauri/src/models/: attachment.rs  character.rs  chat.rs  config.rs  knowledge.rs  memory.rs  mod.rs  (+3 more)
(+195 files in other folders)
