[package]
name = "ai-character-chat"
version = "0.1.0"
description = "AI Character Chat Desktop Application"
authors = ["AI Character Chat Contributors"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "ai_character_chat_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "fs"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
async-trait = "0.1"
pdf-extract = "0.7"
base64 = "0.22"
futures = "0.3"
dotenvy = "0.15"
rand = "0.8"
tempfile = "3"

[dev-dependencies]
proptest = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
